fixed spacing and margins for sign-in and sign-up

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,6 +31,7 @@
     justify-content: space-between;
     text-align: right;
     box-sizing: border-box;
+    z-index: 3;
 }
 
 .account-container {
@@ -61,9 +62,19 @@
     border: inherit;
 }
 
+.sub-navbar {
+    background: #232F3E;
+    color: #cccccc;
+    height: 39px;
+    top: 60px;
+    font-style: inherit;
+    font-size: inherit;
+    position: fixed;
+    width: 100%;
+}
 .nav-logo {
     position: absolute;
-    z-index: 1;
+    z-index: 4;
 }
 
 #artazon-logo {
@@ -130,13 +141,3 @@
     background-image: linear-gradient(to bottom, rgba(240, 193, 75, 0.5), rgba(240, 193, 75, 1));
 }
 
-.sub-navbar {
-    background: #232F3E;
-    color: #cccccc;
-    height: 39px;
-    top: 60px;
-    font-style: inherit;
-    font-size: inherit;
-    position: fixed;
-    width: 100%;
-}
